--- a/about us.html
+++ b/about us.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
     <link rel="stylesheet" href="about.css">
+    <title>About-us</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Whisper&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class  = "grid-father">
+    <div class="grid-cont">
+        <div class="overlay"></div>
         <header>
             <button id = "hum">
                 <div id = "bar-1"></div>
                 <div id  = "bar-2"></div>
                 <div id = "bar-3"></div>
-            </button> 
-            <div class  = "desktop-nav">
+            </button>
+                       <div class  = "desktop-nav">            
                 <a href = "index.html"> <h3>Home</h3></a>
                 <a href = "history.html"><h3>History</h3> </a>
                 <a href = "places to visit.html"> <h3>Places to  visit</h3></a>
@@ -22,29 +26,24 @@
                 <a href = "about us.html"> <h3>Addis in photo</h3></a>
             </div>     
         </header>
-        <nav class  = "hid-nav">
-            <a href = "index.html"> <h3>Home</h3></a>
-            <a href = "history.html"><h3>History</h3> </a>
-            <a href = "places to visit.html"> <h3>Places to  visit</h3></a>
-            <a href = "about us.html"> <h3>About us</h3></a>
-            <a href = "about us.html"> <h3>Addis in photo</h3></a> 
+        <nav class  = "nav-class">
+                <a href = "index.html"> <h3>Home</h3></a>
+                <a href = "history.html"><h3>History</h3> </a>
+                <a href = "places to visit.html"> <h3>Places to  visit</h3></a>
+                <a href = "about us.html"> <h3>About us</h3></a>
+                <a href = "about us.html"> <h3>Addis in photo</h3></a>
         </nav>
-        <div class="top1"></div>
-        <div class="top2"></div>
         <main>
-            <div class="photo">
-                <img  src  = "images/moha/LZ8A2562.JPG"class = "first-photo">    
-            </div>
-            <div class="text">
-                <p>Mohammed Abduljelil<br>Cadet Pilot<br>Beginer FrontEnd Developer<br>Validectorian Civil Engineer<br>You can contact me at mabduljelil0@gmail.com</p>
-            </div>
-        </main>
-        <div class="bot1"></div>
-        <div class="bot2"></div>
-        <div class="left"></div>
-        <div class="right"></div>
-        <footer><p>Designed By Mohammed Abduljelil</p></footer>
+        <img src = "images/LZ8A2562.JPG">
+        <div class="aboutme">
+            <p>Mohammed Abduljelil</p>
+            <p>Cadet Pilot</p>
+            <p>Civil Engineer</p>
+            <p>Beginner Front-end Developer</p>
+            <p>mabduljelil0@gmail.com</p>
+        </div>  
+    </main>
     </div>
-  <script src = "about.js"></script>  
+    <script src = "about.js"></script>
 </body>
 </html>
