--- a/about us.html
+++ b/about us.html
@@ -34,7 +34,7 @@
                 <a href = "about us.html"> <h3>Addis in photo</h3></a>
         </nav>
         <main>
-        <img src = "images/LZ8A2562.JPG">
+        <img src = "images/moha/LZ8A2562.JPG">
         <div class="aboutme">
             <p>Mohammed Abduljelil</p>
             <p>Cadet Pilot</p>
